feat: add items ui and interaction

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <!-- buttons -->
-    <section class="header">
+    <section class="section-header">
       <div class="row">
         <div class="header-buttons">
           <div class="btn btn-full add-btn">
@@ -20,11 +20,46 @@
           </div>
         </div>
       </div>
+      <div class="new-item">
+        <div class="row">
+          <textarea class="new-item-text" rows="10"></textarea>
+        </div>
+        <div class="row">
+          <p class="new-item-text-nums">words : 0</p>
+        </div>
+        <div class="row">
+          <div class="btn btn-default">Add</div>
+          <div class="btn btn-default">Cancel</div>
+        </div>
+      </div>
     </section>
     <!-- items -->
-    <section class="items">
-      <div class="row">
-        
+    <section class="section-items">
+      <div class="item">
+        <button class="item-name">Address</button>
+        <div class="item-detail">
+          <div class="row">
+            <textarea class="item-detail-text" rows="10">
+              Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+              Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+            </textarea>
+          </div>
+          <div class="row">
+            <p class="item-text-nums">words : 100</p>
+          </div>
+          <div class="row">
+            <div class="btn btn-default full">Edit</div>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <button class="item-name">Address</button>
+        <div class="item-detail">
+          <p>
+            Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+            Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
+          </p>
+        </div>
       </div>
     </section>
     <!-- footer -->
