feat: add html css

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- buttons -->
+    <!-- HEADER -->
     <section class="section-header">
       <div class="row">
         <div class="header-buttons">
@@ -25,7 +25,7 @@
       <div class="new-item">
         <div class="row">
           <label class="new-item-name-label" for="new-item-name">Name</label>
-          <input type="text" id="new-item-name" class="new-item-name full" />
+          <input type="text" id="new-item-name" class="new-item-name full" required/>
         </div>
         <div class="row">
           <label class="new-item-text-label" for="new-item-text">Text</label>
@@ -40,7 +40,7 @@
         </div>
       </div>
     </section>
-    <!-- items -->
+    <!-- ITEMS -->
     <section class="section-items">
       <div class="item">
         <button class="item-name">Address</button>
