feat: add chrome storage store

--- a/popup.html
+++ b/popup.html
@@ -29,14 +29,14 @@
         </div>
         <div class="row">
           <label class="new-item-text-label" for="new-item-text">Text</label>
-          <textarea class="new-item-text" rows="10"></textarea>
+          <textarea id="new-item-text" class="new-item-text" rows="10"></textarea>
         </div>
         <div class="row">
           <p class="new-item-text-nums">words : 0</p>
         </div>
         <div class="row new-item-buttons">
-          <button class="btn btn-default item-add">Add</button>
-          <button class="btn btn-default item-cancel">Cancel</button>
+          <button id="new-item-button" class="btn btn-default save-item">Add</button>
+          <button id="cancel-new-item" class="btn btn-default cancel-item">Cancel</button>
         </div>
       </div>
     </section>
@@ -56,7 +56,7 @@
             <p class="item-text-nums">words : 100</p>
           </div>
           <div class="row">
-            <div class="btn btn-default full item-edit">Edit</div>
+            <div class="btn btn-default full save-item">Edit</div>
           </div>
         </div>
       </div>
