--- a/popup.html
+++ b/popup.html
@@ -29,46 +29,20 @@
         </div>
         <div class="row">
           <label class="new-item-text-label" for="new-item-text">Text</label>
-          <textarea class="new-item-text" rows="10"></textarea>
+          <textarea id="new-item-text" class="new-item-text" rows="10"></textarea>
         </div>
         <div class="row">
           <p class="new-item-text-nums">words : 0</p>
         </div>
         <div class="row new-item-buttons">
-          <button class="btn btn-default item-add">Add</button>
-          <button class="btn btn-default item-cancel">Cancel</button>
+          <button id="new-item-button" class="btn btn-default save-item">Add</button>
+          <button id="cancel-new-item" class="btn btn-default cancel-item">Cancel</button>
         </div>
       </div>
     </section>
     <!-- ITEMS -->
     <section class="section-items">
-      <div class="item">
-        <button class="item-name">Address</button>
-        <div class="item-detail">
-          <div class="row">
-            <label class="item-detail-text-label" for="item-detail-text">Text</label>
-            <textarea id="item-detail-text" class="item-detail-text" rows="10">
-              Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
-              Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
-            </textarea>
-          </div>
-          <div class="row">
-            <p class="item-text-nums">words : 100</p>
-          </div>
-          <div class="row">
-            <div class="btn btn-default full item-edit">Edit</div>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <button class="item-name">Address</button>
-        <div class="item-detail">
-          <p>
-            Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
-            Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum
-          </p>
-        </div>
-      </div>
+
     </section>
     <!-- footer -->
     <footer>
