--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,7 @@
     </section>
     <!-- ITEMS -->
     <section class="section-items">
-
+      <!-- ITEMS are fully created by js -->
     </section>
     <!-- footer -->
     <footer>
