feat: add onclick cancel button

--- a/popup.html
+++ b/popup.html
@@ -36,7 +36,7 @@
         </div>
         <div class="row new-item-buttons">
           <button id="new-item-button" class="btn btn-default save-item">Add</button>
-          <button id="cancel-new-item" class="btn btn-default cancel-item">Cancel</button>
+          <button id="cancel-new-item" class="btn btn-default cancel-button">Cancel</button>
         </div>
       </div>
     </section>
