feat: apply characters counts on header textarea

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
           <textarea id="new-item-text" class="new-item-text" rows="10"></textarea>
         </div>
         <div class="row">
-          <p class="new-item-text-nums">words : 0</p>
+          <p id="new-item-text-nums">characters : 0</p>
         </div>
         <div class="row new-item-buttons">
           <button id="new-item-button" class="btn btn-default save-item">Add</button>
